# FireflyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_setup.bat  generate_projects.bat  get_dependancies.bat
FireflyEditor/src/: CMakeLists.txt  FEditor_Main.cpp
FireflyEditor/src/Interface/: CMakeLists.txt
FireflyEngine/: CMakeLists.txt
FireflyEngine/src/: CMakeLists.txt  FE_EntryPoint.cpp
FireflyEngine/src/Core/: Application.h  CMakeLists.txt
FireflyEngine/src/ECS/: CMakeLists.txt
FireflyEngine/src/ECS/Component/: Component.h
src/: CMakeLists.txt  EntryPoint.cpp
src/Core/: Application.h  CMakeLists.txt
